--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>9.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
 
     </dependencies>
     <build>
